fix: dark mode by default

--- a/public/src/styles/app.scss
+++ b/public/src/styles/app.scss
@@ -3,6 +3,6 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 95vh;
+  height: 100vh;
   width: 95vw;
 }
